src/app/snapshots/stockterm__app__portfolio__snapshot_tests__portfolio_add_dialog_inline_error.snap
---
source: src/app/portfolio.rs
expression: buffer_snapshot_string(&render_portfolio_add_overlay_buf(&app))
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                  ·Add to portfolio···························                  
                  ·Add holding · Esc cancel · Tab / Shift+Tab·                  
                  ·Symbol: AAPL                              ·                  
                  ·Shares:  abc                              ·                  
                  ·Price:   10                               ·                  
                  ·Enter on Shares · Price | Enter on Price ··                  
                  ·Invalid shares                            ·                  
                  ·                                          ·                  
                  ·                                          ·                  
                  ············································
